--- a/views/guides/index.ejs
+++ b/views/guides/index.ejs
@@ -5,6 +5,7 @@
 </head>
 
 
+<% include ../partials/searchGuides %>
 
 <div class="wrapper-guides">
     <div class="shape-white-articles"></div>
@@ -27,7 +28,7 @@
     
     
         <% }); %>
-    </div>
+    
     
 </div>
 
