--- a/public/stylesheets/guide-index.css
+++ b/public/stylesheets/guide-index.css
@@ -1,14 +1,13 @@
 .wrapper-guides {
-    max-width: 1532px;
+    max-width: 1476px;
+    width:100%;
     height: auto;
-    margin:0 auto;
+    margin:80px auto 110px;
     display: grid;
     grid-template-columns: repeat(4, 354px);
     grid-template-rows: repeat(4, 354px);
     grid-column-gap: 20px;
     grid-row-gap: 20px;
-    margin-bottom: 130px;
-    
 }
 
 
@@ -55,7 +54,7 @@ figure {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    
+    margin-bottom: 32px;
 }
 
 .card-wrapper:hover {  
@@ -101,5 +100,6 @@ figure {
 
     .card-image-guide {
         max-width: 640px;
+        
     }
 }
