--- a/public/stylesheets/search-article.css
+++ b/public/stylesheets/search-article.css
@@ -1,4 +1,8 @@
-
+h1 {
+  font-family: 'GothamPro', sans-serif !important;
+  color: #4B535F !important;
+  margin-bottom: 69px !important;
+}
 .input-group {
     
     border-radius: 7px;
@@ -11,26 +15,6 @@
     align-items: center;
 }
 
-fieldset {
-  border: none;
-  margin:0 !important;
-}
-
-.search-input {
-    max-width:1536px;
-    width:100%;
-    border:none;
-    height:80px;
-    margin:0;
-    padding: 0 45px;
-    font-family: "Lato-Regular",sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    border-radius:7px;
-    margin-top:10px;
-
-}
 
 .title-text {
   margin-left:16px;
@@ -39,32 +23,7 @@ fieldset {
   margin-bottom: 24px;
 }
 
-.search-input:focus {
-    outline: none;
-    background-position:  center right ;
-  }
-  
-  .search-input:focus::-webkit-input-placeholder {
-    color: transparent;   
-  }
 
-.input-submit-head {
-    width: 100%;
-    max-width:150px;
-    background-image: linear-gradient(307.84deg, #F34B31 -11.35%, #FFA782 106.98%);
-    padding: 24px 40px 24px 40px;
-    margin:12px 16px;
-    color:white;
-    border:none;
-    text-transform: uppercase;
-    font-family: "Lato-Regular",sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    border-radius: 5px;
-    margin: 0 auto;
-}
 
   .search-filter {
     max-width:1536px;
@@ -72,63 +31,42 @@ fieldset {
   }
 
   .checklabel {
-	display:block;
-	width:185px;
-	cursor: pointer;
-	color:#5570BA;
-	text-decoration: underline;
-	text-align:center;
-	padding:5px 10px;
-	
-	font-size: 16px;
-  line-height: 100%;
-}
-.checklabel:hover {
-	cursor: pointer;
-}
+    display:block;
+    width:185px;
+    cursor: pointer;
+    color:#5570BA;
+    text-decoration: underline;
+    text-align:center;
+    padding:5px;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 100%;
+  }
+  .checklabel:hover {
+    cursor: pointer;
+    color:#4B535F;
+    text-decoration: underline;
+    text-decoration: underline !important;
+  }
+
+ .current-link {
+  color: #4B535F;
+  text-decoration: none;
+ }
 
 
-.checkbox {
-	cursor: pointer;
-	position: absolute;
-	width:185px;
-	height: 50px;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	-ms-appearance: none;
-	appearance: none;
-	border:none;
-	padding:0;
-	border-radius:0;
-	vertical-align: middle;
-	background-repeat:no-repeat;
-	background-size:cover;
-	background-color:transparent;
-	background-position:-10em -10em;
-	transition:.3s ease;
-  outline:0;
-  z-index: -10;
+
+.desctop-filter {
+  display: none;
 }
 
-.height {
-  height: 100px;
-}
-
-
-
-
-.category-filter {
-    max-width:1300px;
-    width:100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+.mobile-filter {
+  left: -22px;
 }
 
 .checkbox-container {
     width: 100%;
+    max-width: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -156,11 +94,18 @@ fieldset {
   }
 
   .category-filter {
+    max-width:1300px;
+    width:100%;
+    display: flex;
+    flex-direction: row;
     justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
   }
 
   .title-text {
-    margin-left:0;
+    margin-left:32px;
+    margin-top:40px;
   }
 
   .checklabel {
@@ -171,4 +116,14 @@ fieldset {
     font-size: 65.6106px;
     line-height: 114.9%;
   }
+
+  .desctop-filter {
+    display: block;
+  }
+  .mobile-filter {
+    display: none;
+  }
+
+  
 }
+
