--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,7 @@
 <head>
     <link rel='stylesheet' href='/stylesheets/footer.css' />
     <link rel="stylesheet" href='/stylesheets/circles.css'>
-    <!-- UIkit CSS -->
-	<link rel="preload" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 
-	<!-- UIkit JS -->
-    <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
 </head>
  
 <div class="footer-wrapper-form">
@@ -89,3 +84,4 @@
 
 <script src="/javascripts/contact-us-validation.js"></script>
 
+<link rel="stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/uikit/3.3.2/css/uikit.css'>
