--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -84,4 +84,4 @@
 
 <script src="/javascripts/contact-us-validation.js"></script>
 
-<link rel="stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/uikit/3.3.2/css/uikit.css'>
+<link rel="stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/uikit/3.3.2/css/uikit.min.css'>
