--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,9 +1,7 @@
 <head>
     <link rel='stylesheet' href='/stylesheets/navbar.css' />
-    <link rel='stylesheet' href='/stylesheets/icomoon.css' />
-    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/bb881ea665/UntitledProject/style.css">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <!--<link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" rel='stylesheet'>-->
+    <link href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" rel='stylesheet'>
 </head>
 <nav>
     <ul class="menu">
@@ -17,13 +15,13 @@
         <li class="item"><a href="/contacts">Контакты</a></li>
         <li class="item mobile"><a href="tel:+380631187452">+38 063 118 74 52</a></li>
         <li class="item icons">
-            <a href=""><i class="fab fa-instagram"></i><span class="icon-instagram"></span></a>
-            <a href=""><i class="fab fa-facebook-f"></i> <span class="icon-facebook"></span></a>
-            <a href=""><i class="fab fa-linkedin-in"></i><span class="icon-linkedin2"></span></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-facebook-f"></i></a>
+            <a href=""><i class="fab fa-linkedin-in"></i></a>
         </li>
         <% if(!currentUser) { %>
         <li class="item icon-navbar">
-            <a href="/register"><i class="fas fa-user"></i><span class="icon-user"></span></a>
+            <a href="/register"><i class="fas fa-user"></i></a>
         </li>
         
         <% } else { %>
