--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,8 @@
     <link rel="stylesheet" href="/stylesheets/index-first-section.css">
     <link rel="stylesheet" href="/stylesheets/index-second-section.css">
     <link rel="stylesheet" href='/stylesheets/circles.css'>
-    <link href='/stylesheets/index.css' rel='stylesheet'> 
+    <link rel="preload" href='/stylesheets/index.css' as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href='/stylesheets/index.css'></noscript>
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
