--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,12 @@
 <head>
     <link rel='stylesheet' href='/stylesheets/footer.css' />
     <link rel="stylesheet" href='/stylesheets/circles.css'>
+    <!-- UIkit CSS -->
+	 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/css/uikit.min.css" />
 
+	 <!-- UIkit JS -->
+	 <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
+	 <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
 </head>
  
 <div class="footer-wrapper-form">
@@ -84,4 +89,3 @@
 
 <script src="/javascripts/contact-us-validation.js"></script>
 
-<link rel="stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/uikit/3.3.2/css/uikit.min.css'>
