--- a/views/guides/new.ejs
+++ b/views/guides/new.ejs
@@ -26,6 +26,12 @@
 				<input type="text" class="uk-input uk-width-1-3" name="location" placeholder="Местоположение" >
 			</div>	
 		</div>
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Страна где расположен район или город:</p>
+				<input type="text" name="country" placeholder="Страна" class="uk-input uk-width-1-3" >
+			</div>	
+		</div>
 		<div >
 			<div >
 				<p class="uk-text-bolder uk-margin-top">Текст гида:</p>
