--- a/views/index.ejs
+++ b/views/index.ejs
@@ -160,25 +160,25 @@
             <div class="card-image keys-about" style="background-image: url('../images/keys-middle.png');" data-image-full="../images/keys.png">
                 <img src="../images/keys-middle.png" alt="Keys" />    
             </div>
-            <span class="text-about-content keys-content">Naszym priorytetem jest uczynienie z Ciebie idealnej oferty, a nie otrzymanie prowizji.</span>  
+            <span class="text-about-content keys-content">Нашим приоритетом является поиск идеального объекта для клиента, а не размер вознаграждения</span>  
         </div>
         <div class="about-item-block">
             <div class="card-image search-about" style="background-image: url('../images/search-middle.png');" data-image-full="../images/search.png">
                 <img src="../images/search-middle.png" alt="Search" />    
             </div>
-            <span class="text-about-content search-content">Doskonale znamy rynki, z którymi współpracujemy</span>  
+            <span class="text-about-content search-content">Идеально знаем все рынки недвижимости с которыми работаем</span>  
         </div>
         <div class="about-item-block bottom-row-block">
             <div class="card-image buildings-about" style="background-image: url('../images/buildings-about-middle.png');" data-image-full="../images/buildings-about.png">
                 <img src="../images/buildings-about-middle.png" alt="Buildings about" />    
             </div>
-            <span class="text-about-content buildings-content">Śledzimy dynamikę konstrukcji każdego obiektu</span class="text-about-content">  
+            <span class="text-about-content buildings-content">Контролируем динамику строительства объектов</span class="text-about-content">  
         </div>
         <div class="about-item-block bottom-row-block">
             <div class="card-image globe-about" style="background-image: url('../images/globe-middle.png');" data-image-full="../images/globe.png">
                 <img src="../images/globe-middle.png" alt="Globe" />    
             </div>
-            <span class="text-about-content globe-content">Osobiście znasz wszystkie przedmioty, które sprzedajemy</span>  
+            <span class="text-about-content globe-content">В курсе всех подводных камней</span>  
         </div>
     </div>
 </div>
