--- a/public/stylesheets/project-show.css
+++ b/public/stylesheets/project-show.css
@@ -264,7 +264,7 @@ a:hover {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    
     position: relative;
   }
 
@@ -370,7 +370,7 @@ a:hover {
     object-fit: cover;
     max-width:485px;
     width:100%;
-    
+    max-height: 260px;
 }
 
 
@@ -555,13 +555,13 @@ a:hover {
     }
 
     .gallery-show {
-        justify-content: space-around;
+        justify-content: flex-start;
       }
     
     .gallery-item {
         max-width: 485px;
         height: auto;
-        margin:0 0 70px;
+        margin:0 8px 70px;
         padding:0;
     }
     .content-project-wrapper {
