--- a/views/guides/edit.ejs
+++ b/views/guides/edit.ejs
@@ -24,7 +24,12 @@
 				<input type="text" name="location" placeholder="Местоположение" class="uk-input uk-width-1-3"  value="<%= guide.location %>">
 			</div>	
 		</div>
-		
+		<div>
+			<div>
+				<p class="uk-text-bolder uk-margin-top">Страна где расположен район или город:</p>
+				<input type="text" name="country" placeholder="Страна" class="uk-input uk-width-1-3"  value="<%= guide.country %>">
+			</div>	
+		</div>
 		<div>
 			<div>
 				<p class="uk-text-bolder uk-margin-top">Текст гида:</p>
