--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -25,9 +25,9 @@
         <% projects.docs.forEach(function(project){ %>
             <div class="project-card">
                 
-                <a href="/projects/<%= project.id %>"><img class="title-image"
-                
-                src="<%= image_url(project.images[0].public_id, {width: 485, height: 360,  crop: "fit"}) %>"
+                <a href="/projects/<%= project.id %>"><img class="title-image lazy"
+                data-src="<%= image_url(project.images[0].public_id, {width: 460, height: 360,  crop: "fit"}) %>"
+                src="<%= image_url(project.images[0].public_id, {width: 60, height: 60,  crop: "fit"}) %>"
                 alt="<%= project.title %>"></a>    
                 
                 <h2 class="project-title-index"><%= project.title %></h2>
@@ -51,5 +51,25 @@
 <script>
     mapboxgl.accessToken = "<%= mapBoxToken %>";
     var projects = { features: <%- JSON.stringify(projects.docs) %> };
+    const myImgs = document.querySelectorAll('.lazy');
+    const config = {
+        rootMargin: '50px 20px 75px 30px',
+        threshold: [0, 0.25, 0.75, 1]
+    };
+    observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                console.log('in the view',entry.target);
+                const lazyImage = entry.target
+                lazyImage.src = lazyImage.dataset.src
+                lazyImage.classList.remove("lazy");
+                
+            }
+        });
+    },config);
+
+    myImgs.forEach(image => {
+        observer.observe(image);
+    });
 </script>
 <script src="/javascripts/allPostsClusterMap.js"></script>
