--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -10,14 +10,18 @@
     
     <h1 class="project-title"><%= project.title %></h1>
     
-    <img class="top-image" src="<%= project.images[0].url %>" alt="<%= project.title %>">
+    <img 
+        class="top-image lazy" 
+        data-src="<%= image_url(project.images[0].public_id, {width: 1500, height: 710,  crop: "fit"}) %>"
+        src="<%= image_url(project.images[0].public_id, {width: 160, height: 160,  crop: "fit"}) %>"
+        alt="<%= project.title %>">
     <div class="swiper-container-mobile" style="margin-bottom: 1rem;">
         <div class="swiper-wrapper"> 
             <% project.images.forEach(function(image,i) { %>
                 <img 
-                    class="swiper-slide" 
-                    src="<%= image.url %>" 
-                    src="<%= image_url(image.public_id, {width: 485, height: 360,  crop: "fit"}) %>"
+                    class="swiper-slide lazy" 
+                    data-src="<%= image_url(image.public_id, {width: 800, height: 600,  crop: "fit"}) %>"
+                    src="<%= image_url(image.public_id, {width: 60, height: 60,  crop: "fit"}) %>"
                 >
                 
             <% }) %> 
@@ -81,7 +85,10 @@
             
             
             <% project.images.forEach(function(image,i) { %>
-                <img src="<%= image_url(image.public_id, {width: 485, height: 360,  crop: "fit"}) %>" class="gallery-item" onclick="openLightbox(<%= i %>);">
+                <img 
+                    data-src="<%= image_url(image.public_id, {width: 800, height: 600,  crop: "fit"}) %>"
+                    src="<%= image_url(image.public_id, {width: 60, height: 60,  crop: "fit"}) %>" 
+                    class="gallery-item lazy" onclick="openLightbox(<%= i %>);">
                 
             <% }) %> 
             
@@ -98,8 +105,11 @@
                                 
                                         <div class="swiper-slide c-gallery-modal__slide" style="background-color: transparent;">
                                         
-                                            <img data-src="<%= image.url %>" class="image-gallery swiper-lazy">
-                                            <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
+                                            <img 
+                                            
+                                            data-src="<%= image_url(image.public_id, {width: 800, height: 600,  crop: "fit"}) %>"
+                                            src="<%= image_url(image.public_id, {width: 60, height: 60,  crop: "fit"}) %>"
+                                            class="image-gallery lazy">
                                             <span class="slide-title"><%= i+1 %>/<%= project.images.length %>  </span>
                                         </div> 
                                         
@@ -233,8 +243,9 @@
         <% projectsMore.forEach(function(project){ %>
             <div class="project-card">
                 
-                <a href="/projects/<%= project._id %>"><img class="title-image"
-                src="<%= project.images[0].url %>"
+                <a href="/projects/<%= project._id %>"><img class="title-image lazy"
+                data-src="<%= image_url(project.images[0].public_id, {width: 460, height: 360,  crop: "fit"}) %>"
+                src="<%= image_url(project.images[0].public_id, {width: 60, height: 60,  crop: "fit"}) %>"
                 alt="<%= project.title %>"></a>    
                 
                 <h2 class="project-title-index"><%= project.title %></h2>
@@ -250,7 +261,26 @@
 
 
 <script>
-   
+   const myImgs = document.querySelectorAll('.lazy');
+    const config = {
+        rootMargin: '50px 20px 75px 30px',
+        threshold: [0, 0.25, 0.75, 1]
+    };
+    observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                console.log('in the view',entry.target);
+                const lazyImage = entry.target
+                lazyImage.src = lazyImage.dataset.src
+                lazyImage.classList.remove("lazy");
+                
+            }
+        });
+    },config);
+
+    myImgs.forEach(image => {
+        observer.observe(image);
+    });
   
   function openLightbox(n) {
     
