--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -16,13 +16,21 @@
         
     </div>
     
-    <img class="article-image" src="<%= image_url(article.images[0].public_id, {width: 1000, height: 650,  crop: "fit"}) %>" alt="<%= article.title %>">
+    <img class="article-image lazy" 
+         data-src="<%= image_url(article.images[0].public_id, {width: 1000, height: 650,  crop: "fit"}) %>" 
+         src="<%= image_url(article.images[0].public_id, {width: 60, height: 60,  crop: "fit"}) %>"
+         alt="<%= article.title %>"
+    >
     
     <p class="article-intro"><%= article.introduction %></p>
     <h5 class="article-category"><%= article.category %></h5>
     <div class="article-text" id="root"></div>
 
-    <img class="article-image" src="<%= image_url(article.images[1].public_id, {width: 1000, height: 650,  crop: "fit"}) %>" alt="<%= article.title %>">
+    <img class="article-image lazy" 
+         data-src="<%= image_url(article.images[1].public_id, {width: 1000, height: 650,  crop: "fit"}) %>"
+         src="<%= image_url(article.images[1].public_id, {width: 60, height: 60,  crop: "fit"}) %>" 
+         alt="<%= article.title %>"
+    >
     
     <p class="article-conclusion" ><%= article.conclusions %></p>
 
@@ -72,7 +80,26 @@
 
 
 <script>
-    
+    const myImgs = document.querySelectorAll('.lazy');
+    const config = {
+        rootMargin: '50px 20px 75px 30px',
+        threshold: [0, 0.25, 0.75, 1]
+    };
+    observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                console.log('in the view',entry.target);
+                const lazyImage = entry.target
+                lazyImage.src = lazyImage.dataset.src
+                lazyImage.classList.remove("lazy");
+                
+            }
+        });
+    },config);
+
+    myImgs.forEach(image => {
+        observer.observe(image);
+    });
     var body = { features: <%- JSON.stringify(article.body) %> };
      
     var stringHTML = body.features;
