--- a/views/guides/show.ejs
+++ b/views/guides/show.ejs
@@ -19,7 +19,10 @@
         </div>
     </div>
     
-    <img class="article-image" src="<%= guide.images[0].url %>" alt="<%= guide.title %>">
+    <img class="article-image lazy" 
+         data-src="<%= image_url(guide.images[1].public_id, {width: 1000, height: 650,  crop: "fit"}) %>" 
+         src="<%= image_url(guide.images[1].public_id, {width: 60, height: 60,  crop: "fit"}) %>"  
+         alt="<%= guide.title %>">
     
     <div class="map-container">
         <div class="map-info">
@@ -31,7 +34,11 @@
     </div>
     <p class="article-intro"><%= guide.introduction %></p>
     <p class="article-text" id="root"></p>
-    <img class="article-image" src="<%= guide.images[1].url %>" alt="<%= guide.title %>">
+    <img class="article-image lazy" 
+         
+         data-src="<%= image_url(guide.images[1].public_id, {width: 1000, height: 650,  crop: "fit"}) %>" 
+         src="<%= image_url(guide.images[1].public_id, {width: 60, height: 60,  crop: "fit"}) %>" 
+         alt="<%= guide.title %>">
 
     <p class="article-conclusion" ><%= guide.conclusions %></p>
     <canvas id="myChart" width="100" height="50"></canvas>
@@ -55,6 +62,26 @@
 
 
 <script>
+    const myImgs = document.querySelectorAll('.lazy');
+    const config = {
+        rootMargin: '50px 20px 75px 30px',
+        threshold: [0, 0.25, 0.75, 1]
+    };
+    observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                console.log('in the view',entry.target);
+                const lazyImage = entry.target
+                lazyImage.src = lazyImage.dataset.src
+                lazyImage.classList.remove("lazy");
+                
+            }
+        });
+    },config);
+
+    myImgs.forEach(image => {
+        observer.observe(image);
+    });
     var guide = <%- JSON.stringify(guide) %>;
     var body = { features: <%- JSON.stringify(guide.body) %> };
      
