--- a/views/guides/show.ejs
+++ b/views/guides/show.ejs
@@ -2,7 +2,6 @@
 <head>
     <link rel='stylesheet' href='/stylesheets/article-show.css' />
     <link rel='stylesheet' href='/stylesheets/guide-show.css' />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css' type='text/css' />
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
@@ -96,7 +95,7 @@
     document.getElementById('root').appendChild(tempElement);
 </script>
 <script src='/javascripts/guide-show.js'></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
 <script>
 var dataGr = [<%= guide.data %>];
 var labelsGr = [<%= guide.labels %>];
