--- a/views/layouts/project-show-layout.ejs
+++ b/views/layouts/project-show-layout.ejs
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/project-show.css">
     <link async  rel="stylesheet" href="/stylesheets/starability-basic.min.css">
-    <script
+    <script async
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
