--- a/views/projects/show.ejs
+++ b/views/projects/show.ejs
@@ -2,7 +2,7 @@
 
 <head>
     <link rel='stylesheet' href='/stylesheets/lightbox.css' />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+    <link async rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 </head>
 
